projects/kit/components/textarea/textarea.style.less
@import '@taiga-ui/styles/utils';

@top-m-label: calc(0.5rem + var(--t-height) / 3);
@top-l-label: calc(0.625rem + var(--t-height) / 3);

tui-textarea-content:where(*&) {
    .scrollbar-hidden();

    order: 1;
    inline-size: calc(100% - var(--t-start) - var(--t-end) - var(--t-side));
    padding-inline-start: var(--t-start);
    padding-inline-end: calc(var(--t-end) + var(--t-side) + var(--t-space));
    overflow: auto;

    tui-textfield._with-label[data-size='m'] & {
        margin-block-start: calc(-1.25 * var(--tui-font-offset) - 1.375rem);
        margin-block-end: 0.3125rem;
    }

    tui-textfield._with-label[data-size='l'] & {
        margin-block-start: calc(-1.25 * var(--tui-font-offset) - 1.75rem);
        margin-block-end: 0.5rem;
    }

    tui-textfield[data-size='s'] & {
        margin-block: -1.625rem 0.5rem;
    }

    tui-textfield[data-size='m'] & {
        margin-block: -2rem 0.875rem;
    }

    tui-textfield[data-size='l'] & {
        margin-block: -2.5rem 1rem;
    }

    .t-scroll {
        position: absolute;
        inset: 0.25rem 0;
        min-block-size: 0;

        tui-textfield._with-label[data-size='m'] & {
            inset-block-start: @top-m-label;
        }

        tui-textfield._with-label[data-size='l'] & {
            inset-block-start: @top-l-label;
        }
    }

    .t-ghost {
        position: relative;
        z-index: 1;
        display: block;
        white-space: pre-wrap;
        word-break: break-word;
        overflow-wrap: break-word;
        pointer-events: none;
        box-sizing: content-box;
        overflow: hidden;
        color: transparent;
        view-timeline: --t-scrollbar-y y;

        &::after {
            content: ' ';
        }
    }
}

tui-textfield._with-label[data-size='m'] textarea[tuiTextarea]:where(*&) {
    border-block-start-width: @top-m-label;
    padding-block: 0;
}

tui-textfield._with-label[data-size='l'] textarea[tuiTextarea]:where(*&) {
    border-block-start-width: @top-l-label;
    padding-block: 0;
}

tui-textfield[data-size='s'] textarea[tuiTextarea]:where(*&) {
    padding-block: 0.5rem 0.25rem;
}

tui-textfield[data-size='m'] textarea[tuiTextarea]:where(*&) {
    padding-block: 0.875rem 0.25rem;
}

tui-textfield[data-size='l'] textarea[tuiTextarea]:where(*&) {
    padding-block: 1.125rem 0.375rem;
}

tui-textfield:has(.t-ghost > * > span) textarea[tuiTextarea]:where(*&) {
    overscroll-behavior: none;
}

textarea[tuiTextarea][tuiTextarea]:where(*&) {
    block-size: 100%;
    white-space: pre-wrap;
    overflow: auto;
    word-break: break-word;
    border: 0 solid transparent;

    &:not(._mobile) {
        .scrollbar-hidden();
    }
}

